shortened sentences by ALOT

--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -8,10 +8,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to recent developments in approximate posterior inference, Bayesian models have become much more easier to build. Therefore the assessment of the models are becoming a bigger concern. The paper Population Predictive Checks [Ranganath & Blei 2019] introduces an assessment framework called the POP-PC for Bayesian models, and show examples of applying it to the Dirichlet Process, Bayesian Linear Regression, and Latent Dirichlet Allocation. Since they have not proven the strength of POP-PCs for other Bayesian models such as Matrix Factorization (MF) and Gaussian Mixture Models (GMM), we have decided to test the POP-PC model assessment framework on these two models."
+    "- Assessment of Bayesian models are becoming a bigger concern\n",
+    "- Population Predictive Checks [Ranganath & Blei 2019] introduces an assessment framework called the POP-PC\n",
+    "- Examples POP-PC for Dirichlet Process, Bayesian Linear Regression, and Latent Dirichlet Allocation\n",
+    "- Haven’t proven it on Bayesian models such as Matrix Factorization (MF) and Gaussian Mixture Models (GMM)"
    ]
   },
   {
@@ -20,21 +24,23 @@
    "source": [
     "### Posterior Predictive Checks\n",
     "\n",
-    "PPCs are a powerful model-checking procedure that performs the following: simulate replicated data from the posterior predictive distribution, compute a discrepancy that measures \"relevance\", and compare the distance between the discrepancy of observed and replicated data.\n",
+    "- Powerful model-checking procedure that performs the following: \n",
+    "    - Simulate replicated data from posterior predictive distribution\n",
+    "    - Compute discrepancy that measures \"relevance\"\n",
+    "    - Compare distance between discrepancy of observed and replicated data\n",
     "\n",
-    "More formally, A PPC is defined by:\n",
+    "- Formally defined by:\n",
     "\\begin{equation}\n",
     "    PPC(x^{obs}; g, d) = E[g(d(x^{rep}, \\theta), d(x^{obs}, \\theta)) | x^{obs}]\n",
     "\\end{equation}\n",
-    "Where the realized discrepancy $d(y, \\theta)$ is a function of both data and hidden variables and $g(\\cdot, \\cdot)$ is a distance function.\n",
+    "Where realized discrepancy $d(y, \\theta)$ is function of both data and hidden variables and $g(\\cdot, \\cdot)$ is distance function.\n",
+    "\n",
+    "- __Issue__: Tend to overfit due to \"double dipping\" the data, i.e. we compute the discrepancy of replicated data based on latent variables we obtained from the observed data.\n",
+    "\n",
+    "- __Solution__: Population Predictive Checks. Use Bootstrap or Cross-validation to obtain $x^{new}$ to model true distribution F.\n",
     "\n",
     "### Population Predictive Checks\n",
-    "\n",
-    "__Issue__: PPCs tend to overfit due to \"double dipping\" the data, i.e. we compute the discrepancy of replicated data based on latent variables we obtained from the observed data.\n",
-    "\n",
-    "__Solution__: Population Predictive Checks. Use Bootstrap or Cross-validation to obtain $x^{new}$ to model the true distribution F.\n",
-    "\n",
-    "A POP-PC is defined by\n",
+    "- Formally defined by:\n",
     "\\begin{equation}\n",
     "    POP-PC(x^{obs}, F; g, d) = E[g(d(x^{rep}, \\theta), d(x^{new}, \\theta)) | x^{obs}, F]\n",
     "\\end{equation}\n"
@@ -48,10 +54,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our project, we use the MovieLens Dataset, which consists of ratings and metadata of movies. Specifically, we use the ratings_small.csv, which is a subset of the entire dataset. (subset consists of 100,000 ratings from 700 users on 9,000 movies)"
+    "- MovieLens Dataset: ratings and metadata of movies\n",
+    "- Subset of 100,000 ratings from 700 users on 9,000 movies"
    ]
   },
   {
@@ -90,10 +98,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we are going to start with PMF, then GMM. (Note that we will use POP-PC and PPC at the very end of each model/section)"
+    "- Start with PMF, then GMM"
    ]
   },
   {
@@ -104,12 +113,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we will use 3 different types of MF to predict the ratings of each users. MF is a technique to represent a given matrix with the product of two matrices. In our setting, one of matrices will represent users$\\times$latent factors (matrix $u$), the other matrix will represent movies$\\times$latent factors (matrix  $v$), and the product of those two matrices will represent the ratings of each movie given by the users. \n",
-    "\n",
-    "Note that we will only use movies that have more than 4 ratings."
+    "- Use 3 different types of MF to predict ratings of users\n",
+    "- Represent matrix with product of two matrices (User and Movies matrix)\n",
+    "- Note that we will only use movies that have more than 4 ratings."
    ]
   },
   {
@@ -210,10 +220,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we implement the Probabilistic Matrix Factorization (PMF) model, which is the simplest \"probabilistic\" MF model. \n",
+    "Implement Probabilistic Matrix Factorization (PMF) model.\n",
     "\n",
     "Given a rating matrix $R$,  user matrix $U$, movie matrix $V$, and variance $\\sigma$, the likelihood of PMF is:\n",
     "\n",
@@ -257,10 +268,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use NUTS MCMC to approximate the posterior distribution of $p(u,v|R,\\lambda, \\mu, \\sigma)$. Then we take the average of the sampled 100 $u^Tv$s as the predicted ratings of the movies given by users. Note that this is how inference is done for the rest of the MF section."
+    "- Use NUTS to approximate the posterior \n",
+    "- Take average of samples as predicted ratings (Same for rest)"
    ]
   },
   {
@@ -297,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the distribution of estimated ratings using PMF and the distribution of the train and test data. Note that we will conduct POP-PC and PPC at the very end of this section."
+    "Comparison of Distributions"
    ]
   },
   {
@@ -353,13 +366,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Compared to the train data, the entire predicted distribution is shifted towards the left side, where the mean of the training data is located. \n",
-    "- Compared to the test data, the predictions are strongly underestimating movies with high rated movies.\n",
+    "- vs train data, predicted distribution is shifted towards the left side, where mean of training data is located\n",
+    "- vs test data, predictions are strongly underestimating movies with high rated movies\n",
     "\n",
-    "To summarize, the PMF model can be thought to be overfitting by capturing the mean of the train data too strongly, preventing balanced predictions. The MAP objective may be causing these concentrated predictions."
+    "Summary:\n",
+    "- PMF model is overfitting by capturing mean of the train data strongly, preventing balanced predictions\n",
+    "- Concentrated predictions"
    ]
   },
   {
@@ -375,7 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In PMF, each user and movie had the same Normal distribution prior with constant mean and variance. In BMF, a prior distribution is set on the mean and variance of the Normal distributions of each user and each movie. This allows more flexibility in representing the different preferences of users and rating trends of movies using the decomposed matrices, producing more balanced predictions. \n",
+    "- In BPMF, prior distribution is set on mean and variance of Normal distributions of each user and movie\n",
+    "- Allows more flexibility in representing different preferences of users and movie trends, producing more balanced predictions.\n",
     "\n",
     "\\begin{equation}\n",
     "    p(R_{ij} | U_i, V_j, \\mu, \\sigma^2) = N(R_{ij}| U_i, V_j, \\mu, \\sigma^2)\n",
@@ -452,10 +469,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the distribution of estimated ratings using BPMF and PMF."
+    "Compare BPMF and PMF"
    ]
   },
   {
@@ -503,12 +521,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The estimated ratings of BPMF are more spread out, having more weight on high rated movies.\n",
-    "\n",
-    "Still, BPMF has a difference in the proportion of low and high ratings compared to the train and test data. This may have something to do with the assumed distribution that generates the ratings."
+    "- Estimated ratings of BPMF are more spread out, having more weight on high rated movies\n",
+    "- BPMF has difference in proportion of low and high ratings compared to the train and test data\n",
+    "- Assumed distribution may be cause"
    ]
   },
   {
@@ -521,10 +540,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In PoiMF, a Poisson distribution is assumed to generate the ratings in the matrix. PoiMF has almost the same posterior distribution as the BPMF, except that the assumed distributions are Poisson and Gamma, with the hyperparameters corresponding to those distributions.\n",
+    "- Poisson distribution is assumed to generate ratings in the matrix\n",
+    "- Assumed distributions/priors are Poisson and Gamma\n",
     "\n",
     "\\begin{equation}\n",
     "    p(R_{ij} | U_i, V_j, e_i, n_j) = Poisson(R_{ij}|U_i, V_j, e_i, n_j) \n",
@@ -597,10 +618,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compare the distribution of estimated ratings using PoiMF, BPMF,and PMF."
+    "- Compare PoiMF, BPMF,and PMF."
    ]
   },
   {
@@ -674,11 +696,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The PoiMF has more high rating estimates compared to BPMF and PMF (closer to the mode of the ratings of the train data).\n",
-    "- PoiMF does not consider the lower ratings as much compared to BPMF and PMF."
+    "- PoiMF has more high rating estimates compared to BPMF and PMF (closer to the mode of the ratings of the train data)\n",
+    "- PoiMF does not consider lower ratings as much"
    ]
   },
   {
@@ -689,11 +712,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the following simple discrepancies for the POP-PC and PPC for MFs.\n",
-    "- Mean, Median, First Quantile, and Third Quantile"
+    "- Use Mean, Median, First Quantile, and Third Quantile Discrepancies"
    ]
   },
   {
@@ -702,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Jayppc_mean, ppc_median, ppc_first_q, ppc_third_q, \\\n",
+    "ppc_mean, ppc_median, ppc_first_q, ppc_third_q, \\\n",
     "    poppc_mean, poppc_median, poppc_first_q, poppc_third_q \\\n",
     "    = util_pmf.model_assessment(train_ratings, test_ratings)"
    ]
@@ -717,6 +740,16 @@
     "                        ppc_first_q, ppc_third_q,\n",
     "                        poppc_mean, poppc_median,\n",
     "                        poppc_first_q, poppc_third_q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Findings:\n",
+    "- PPC overestimates fit of model\n",
+    "- PoiMF had lowest mean discrepancy for k=10\n",
+    "- Calculation of PPC and POP-PC is difficult for Bayesian models that take time."
    ]
   },
   {
@@ -1453,6 +1486,9 @@
    "metadata": {},
    "source": [
     "### Conclusions\n",
+    "* PPC overestimates fit of model for MFs.\n",
+    "* PoiMF had lowest mean discrepancy for k=10.\n",
+    "* Calculation of PPC and POP-PC is difficult for Bayesian models that take time.\n",
     "* Non-identifiability of clusters is a challenge for clustering movies.\n",
     "* LKJCorr prior captures full probabilistic covariance.\n",
     "* Combining POP-PCs and PPCs to choose number of clusters."
@@ -1482,7 +1518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
