deleted data preparation

--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Assessment of Bayesian models are becoming a bigger concern\n",
+    "- Assessment of Bayesian models are becoming bigger concern\n",
     "- Population Predictive Checks [Ranganath & Blei 2019] introduces an assessment framework called the POP-PC\n",
     "- Examples POP-PC for Dirichlet Process, Bayesian Linear Regression, and Latent Dirichlet Allocation\n",
     "- Haven’t proven it on Bayesian models such as Matrix Factorization (MF) and Gaussian Mixture Models (GMM)"
@@ -42,7 +42,7 @@
     "### Population Predictive Checks\n",
     "- Formally defined by:\n",
     "\\begin{equation}\n",
-    "    POP-PC(x^{obs}, F; g, d) = E[g(d(x^{rep}, \\theta), d(x^{new}, \\theta)) | x^{obs}, F]\n",
+    "    POPPC(x^{obs}, F; g, d) = E[g(d(x^{rep}, \\theta), d(x^{new}, \\theta)) | x^{obs}, F]\n",
     "\\end{equation}\n"
    ]
   },
@@ -117,28 +117,6 @@
     "- Use 3 different types of MF to predict ratings of users\n",
     "- Represent matrix with product of two matrices (User and Movies matrix)\n",
     "- Note that we will only use movies that have more than 4 ratings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Preprocessing and Preparation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For the following functions, set checker=0 when first time\n",
-    "ratings_df = util_pmf.data_prepare_load(checker=1)\n",
-    "train_ratings, test_ratings = util_pmf.train_test_split(ratings_df, checker=1)\n",
-    "train_ratings = util_pmf.reindex_train(train_ratings, checker=1)\n",
-    "zero_imputated_ratings = util_pmf.zero_imputation(\n",
-    "    ratings_df, train_ratings, checker=1)\n",
-    "is_observed = (zero_imputated_ratings != 0)"
    ]
   },
   {
