--- a/old/random_code.ipynb
+++ b/old/random_code.ipynb
@@ -6,6 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For the following functions, set checker=0 when first time\n",
+    "ratings_df = util_pmf.data_prepare_load(checker=1)\n",
+    "train_ratings, test_ratings = util_pmf.train_test_split(ratings_df, checker=1)\n",
+    "train_ratings = util_pmf.reindex_train(train_ratings, checker=1)\n",
+    "zero_imputated_ratings = util_pmf.zero_imputation(\n",
+    "    ratings_df, train_ratings, checker=1)\n",
+    "is_observed = (zero_imputated_ratings != 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run this when you do not have 'pmf_posterior_samples.pickle'\n",
     "\"\"\"\n",
     "with open('../data/pmf_posterior_samples.pickle', 'wb') as handle:\n",
@@ -72,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
