removed reading of data file lines

--- a/old/random_code.ipynb
+++ b/old/random_code.ipynb
@@ -6,6 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('../data/poissonmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
+    "    rounded_estimate_ratings = pickle.load(f)\n",
+    "with open('../data/bpmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
+    "    rounded_estimate_ratings = pickle.load(f)\n",
+    "with open('../data/pmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
+    "    rounded_estimate_ratings = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# For the following functions, set checker=0 when first time\n",
     "ratings_df = util_pmf.data_prepare_load(checker=1)\n",
     "train_ratings, test_ratings = util_pmf.train_test_split(ratings_df, checker=1)\n",
