--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -215,16 +215,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/pmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
-    "    rounded_estimate_ratings = pickle.load(f)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -335,16 +325,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/bpmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
-    "    rounded_estimate_ratings = pickle.load(f)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -446,16 +426,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/poissonmf_rounded_posterior_samples.pickle', 'rb') as f:\n",
-    "    rounded_estimate_ratings = pickle.load(f)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -473,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Distribution of Estimated Ratings using PoiMF"
+    "#### Distribution of Estimated Ratings (PoiMF, BPMF, PMF)"
    ]
   },
   {
