word count and util flake8

--- a/poppc-for-bayesian-models.ipynb
+++ b/poppc-for-bayesian-models.ipynb
@@ -11,36 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Assessment of Bayesian models are becoming bigger concern\n",
-    "- Population Predictive Checks [Ranganath & Blei 2019] introduces an assessment framework called the POP-PC\n",
-    "- Examples POP-PC for Dirichlet Process, Bayesian Linear Regression, and Latent Dirichlet Allocation\n",
-    "- Haven’t proven it on Bayesian models such as Matrix Factorization (MF) and Gaussian Mixture Models (GMM)"
+    "- Population Predictive Checks [Ranganath & Blei 2019]\n",
+    "- Examples of Dirichlet Process, Bayesian Linear Regression, LDA.\n",
+    "- Not tried on Matrix Factorization (MF) and Gaussian Mixture Models (GMM)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior Predictive Checks\n",
+    "### Posterior Predictive Checks (PPC)\n",
     "\n",
-    "- Powerful model-checking procedure that performs the following: \n",
-    "    - Simulate replicated data from posterior predictive distribution\n",
-    "    - Compute discrepancy that measures \"relevance\"\n",
-    "    - Compare distance between discrepancy of observed and replicated data\n",
-    "\n",
-    "- Formally defined by:\n",
     "\\begin{equation}\n",
     "    PPC(x^{obs}; g, d) = E[g(d(x^{rep}, \\theta), d(x^{obs}, \\theta)) | x^{obs}]\n",
     "\\end{equation}\n",
-    "Where realized discrepancy $d(y, \\theta)$ is function of both data and hidden variables and $g(\\cdot, \\cdot)$ is distance function.\n",
     "\n",
     "\n",
-    "- __Issue__: Tend to overfit due to \"double dipping\" the data, i.e. we compute the discrepancy of replicated data based on latent variables we obtained from the observed data.\n",
     "\n",
-    "- __Solution__: Population Predictive Checks. Use Bootstrap or Cross-validation to obtain $x^{new}$ to model true distribution F.\n",
+    "- __Issue__: Overfits due to \"double dipping\" the data.\n",
     "\n",
-    "### Population Predictive Checks\n",
-    "- Formally defined by:\n",
+    "- __Solution__: Use Bootstrap/Cross-validation to obtain $x^{new}$ to model true distribution F.\n",
+    "\n",
+    "### Population Predictive Checks (POP-PC)\n",
     "\\begin{equation}\n",
     "    POPPC(x^{obs}, F; g, d) = E[g(d(x^{rep}, \\theta), d(x^{new}, \\theta)) | x^{obs}, F]\n",
     "\\end{equation}\n"
@@ -57,8 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- MovieLens Dataset: ratings and metadata of movies\n",
-    "- Subset of 100,000 ratings from 700 users on 9,000 movies"
+    "- MovieLens Dataset: ratings and metadata of movies\n"
    ]
   },
   {
@@ -100,13 +91,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Start with PMF, then GMM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Matrix Factorization (MF) using the MovieLens Dataset"
    ]
   },
@@ -114,9 +98,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use 3 different types of MF to predict ratings of users\n",
+    "- Use 3 different MFs to predict ratings\n",
     "- Represent matrix with product of two matrices (User and Movies matrix)\n",
-    "- Note that we will only use movies that have more than 4 ratings."
+    "- Will only use movies that have more than 4 ratings"
    ]
   },
   {
@@ -152,7 +136,7 @@
    "source": [
     "Implement Probabilistic Matrix Factorization (PMF) model.\n",
     "\n",
-    "Given a rating matrix $R$,  user matrix $U$, movie matrix $V$, and variance $\\sigma$, the likelihood of PMF is:\n",
+    "Given rating matrix $R$,  user matrix $U$, movie matrix $V$, variance $\\sigma$, the likelihood of PMF is:\n",
     "\n",
     "\\begin{equation}\n",
     "    p(R_{ij} | U_i, V_j, \\mu, \\sigma^2) = N(R_{ij}| U_i, V_j, \\mu, \\sigma^2)\n",
@@ -197,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use NUTS to approximate the posterior \n",
+    "- Use NUTS to approximate posterior \n",
     "- Take average of samples as predicted ratings (Same for rest)"
    ]
   },
@@ -352,7 +336,7 @@
    "metadata": {},
    "source": [
     "- Estimated ratings of BPMF are more spread out, having more weight on high rated movies\n",
-    "- BPMF has difference in proportion of low and high ratings compared to the train and test data\n",
+    "- BPMF has difference in proportion of low/high ratings compared to train and test data\n",
     "- Assumed distribution may be cause"
    ]
   },
@@ -369,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Poisson distribution is assumed to generate ratings in the matrix\n",
+    "- Poisson distribution is assumed to generate ratings in matrix\n",
     "- Assumed distributions/priors are Poisson and Gamma\n",
     "\n",
     "\\begin{equation}\n",
@@ -436,13 +420,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Compare PoiMF, BPMF,and PMF."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Distribution of Estimated Ratings (PoiMF, BPMF, PMF)"
    ]
   },
@@ -461,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- PoiMF has more high rating estimates compared to BPMF and PMF (closer to the mode of the ratings of the train data)\n",
+    "- PoiMF has more high rating estimates compared to BPMF and PMF (closer to mode of ratings of train data)\n",
     "- PoiMF does not consider lower ratings as much"
    ]
   },
@@ -470,13 +447,6 @@
    "metadata": {},
    "source": [
     "### Criticism using POP-PC and PPC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Use Mean, Median, First Quantile, and Third Quantile Discrepancies"
    ]
   },
   {
@@ -515,8 +485,7 @@
     "\n",
     "__Overview:__ \n",
     "* Explore two different GMM models using different priors and inference methods.\n",
-    "* Focus on 5 features: revenue, budget, popularity, vote_count, vote average.\n",
-    "* Choose 5-10 cluster based on the fact that the top movie genres are: Comedy, Drama, Thriller, Action, Romance, Adventure, and release periods: 2010s, 2000s, 1990s, 1980s. "
+    "* Choose 5-10 cluster based on fact that top movie genres are: Comedy, Drama, Thriller etc, and release periods: 2010s, 2000s, 1990s, etc. "
    ]
   },
   {
@@ -526,9 +495,7 @@
    "outputs": [],
    "source": [
     "movies_metadata_dir = os.path.join(\"data\", \"movies_metadata_processed.csv\")\n",
-    "movies_metadata = pd.read_csv(movies_metadata_dir)\n",
-    "movies_metadata[[\"revenue\", \"budget\", \"vote_count\",\n",
-    "                 \"vote_average\", \"popularity\"]].head()"
+    "movies_metadata = pd.read_csv(movies_metadata_dir)"
    ]
   },
   {
@@ -539,22 +506,20 @@
     "\n",
     "### Model\n",
     "\n",
-    "Consider standard GMM model. Given $N$ data points, the likelihood is:\n",
+    "Given $N$ data points, likelihood is:\n",
     "\\begin{equation}\n",
     "    p(x_n | \\pi, \\mu, \\sigma^2) = \\sum_{k=1}^{K} \\pi_k N(x_n | \\mu_k, \\sigma_k^2)\n",
     "\\end{equation}\n",
     "\n",
-    "Define our priors $\\pi \\in [0,1]$ such that $\\sum_{k=1}^{K} \\pi_k = 1$\n",
+    "Define priors $\\pi \\in [0,1]$ s.t. $\\sum_{k=1}^{K} \\pi_k = 1$, $\\mu_k \\in \\mathbb{R}^D$, $\\sigma_k^2 \\in \\mathbb{R}^D$:\n",
     "\\begin{equation}\n",
     "    \\pi \\sim Dir(\\pi | \\alpha \\mathbb{1}_K)\n",
     "\\end{equation}\n",
     "\n",
-    "for fixed $\\alpha = 1$, and for each $\\mu_k \\in \\mathbb{R}^D$:\n",
     "\\begin{equation}\n",
     "    \\mu_k \\sim Normal(\\mu_k | 0, I)\n",
     "\\end{equation}\n",
     "\n",
-    "and for each component $\\sigma_k^2 \\in \\mathbb{R}^D$:\n",
     "\\begin{equation}\n",
     "    \\sigma_k^2 \\sim InvGamma(\\sigma_k^2 | 1, 1)\n",
     "\\end{equation}"
@@ -567,9 +532,9 @@
    "outputs": [],
    "source": [
     "data, data_new = util_gmm.get_train_test_split(movies_metadata)\n",
-    "K = 8  # Clusters\n",
-    "d = len(data[0])  # Dimensions\n",
-    "N = len(data)  # Length of data"
+    "K = 8\n",
+    "d = len(data[0])\n",
+    "N = len(data)"
    ]
   },
   {
@@ -602,7 +567,7 @@
    "source": [
     "### Inference\n",
     "\n",
-    "Run SVI and compute MAP estimates of posterior for $p(\\pi, \\mu, \\sigma^2|x_n)$."
+    "Run SVI and compute MAP estimates of posterior."
    ]
   },
   {
@@ -630,8 +595,7 @@
     "\n",
     "\n",
     "loss, seed = min((initialize(seed), seed) for seed in range(100))\n",
-    "initialize(seed)\n",
-    "print('seed = {}, init loss = {}'.format(seed, loss))"
+    "initialize(seed)"
    ]
   },
   {
@@ -669,11 +633,11 @@
    "source": [
     "### Criticism\n",
     "\n",
-    "The ELBO seems to decrease in general but increases midway. The gradients of the scale, locs and weights are noisy.\n",
+    "ELBO decreases in general but increases midway. Gradients of scale, locs, and weights are noisy.\n",
     "\n",
     "__Issues:__ \n",
-    "* The priors collapses to local minimum during SVI, and all clusters tend to converge to same point. \n",
-    "* Not fully probabilistic - the Inverse Gamma prior for the variance does not capture cross-covariances."
+    "* Priors collapses to local minimum during SVI - all clusters tend to converge to same point. \n",
+    "* Not fully probabilistic - Inverse Gamma prior for variance does not capture cross-covariances."
    ]
   },
   {
@@ -699,37 +663,32 @@
    "metadata": {},
    "source": [
     "__Alternative:__ \n",
-    "* Consider MCMC for full posterior over components. \n",
-    "* For multivariate covariance matrix, conjugate prior is Inverse-Wishart distribution [Gelmen et al., 2003].\n",
+    "* MCMC for full posterior over components. \n",
+    "* For multivariate covariance matrix, conjugate prior is Inverse-Wishart distribution.\n",
     "* However, Inverse Wishart is not suitable prior. It is heavy-tailed; which are obstructions to ergodicity requirement for MCMC. \n",
     "\n",
     "__Solution:__ \n",
-    "* Try LKJCorr Prior for full probabilistic covariance [Barnard, McCulloch & Meng, 2000]. \n",
+    "* LKJCorr prior for full probabilistic covariance. \n",
     "* LKFCorr distribution has lighter tails \n",
-    "* Uses Cholesky factorization for faster computation, $\\Sigma= L L^T$\n",
+    "* Cholesky factorization for faster computation, $\\Sigma= L L^T$\n",
     "\n",
     "\n",
-    "### Experiment 2: NUTS and Normal LKJ Correlation Cholesky Prior\n",
+    "### Experiment 2: NUTS and Normal-LKJCorr Prior\n",
     "\n",
     "### Model\n",
-    "Given the same setup as before:\n",
-    "\\begin{align}\n",
-    "    \\pi &\\sim Dir(\\pi | \\alpha \\mathbb{1}_K) \\\\\n",
-    "    \\mu_k &\\sim Normal(\\mu_k | 0, I)\n",
-    "\\end{align}\n",
     "\n",
-    "Define the covariance matrix as:\n",
+    "Given same setup before, define covariance matrix as:\n",
     "\\begin{equation}\n",
     "    \\Sigma = diag(\\theta) \\Omega diag(\\theta)\n",
     "\\end{equation}\n",
     "\n",
-    "Set priors where $\\theta_k$ is the scale vector and $\\Omega$ is the correlation matrix defined by\n",
+    "$\\theta$ scale vector, $\\Omega$ correlation matrix:\n",
     "\\begin{align}\n",
-    "    \\theta_k &\\sim HalfCauchy(1) \\\\\n",
-    "    \\Omega_k &\\sim LKJCorr(\\eta) \\\\\n",
+    "    \\theta &\\sim HalfCauchy(1) \\\\\n",
+    "    \\Omega &\\sim LKJCorr(\\eta) \\\\\n",
     "\\end{align}\n",
     "\n",
-    "The LKJ correlation distribution is defined by\n",
+    "LKJ correlation distribution:\n",
     "\\begin{equation}\n",
     "    LKJCorr(\\Sigma | \\eta) \\propto det(\\Sigma)^{\\eta -1}\n",
     "\\end{equation}"
@@ -766,7 +725,7 @@
    "source": [
     "### Inference\n",
     "\n",
-    "__Steps:__ Run NUTS MCMC over 250 samples, draw trace plots of posterior samples and compute Bayes estimate of $p(\\pi, \\mu, \\Sigma|x_n)$."
+    "Run NUTS over 250 samples, draw trace plots of posterior samples and compute Bayes estimate."
    ]
   },
   {
@@ -815,9 +774,9 @@
     "### Criticism\n",
     "\n",
     "__Results:__ \n",
-    "* Components of $\\mu_k, \\Sigma_k$ seem to capture general distribution of data well\n",
-    "* Most of density in GMM is clustered within single component\n",
-    "* Looking at assignments of each movie using trained GMM, there is no significant pattern (genres/release periods) within each group"
+    "* Components of $\\mu_k, \\Sigma_k$ seem to capture general distribution of data well.\n",
+    "* Most of density in GMM is clustered within single component.\n",
+    "* Looking at the assignments, there is no significant pattern (genres/release periods) within each group."
    ]
   },
   {
@@ -844,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior Predictive Checks\n",
+    "### PPC\n",
     "\n",
     "Use realized discrepancy $d(x, \\theta)$, which is function of both data and hidden variables. Ex. log-likelihood for GMMs:\n",
     "\\begin{align}\n",
@@ -871,17 +830,14 @@
    "source": [
     "d_obs = util_gmm.compute_log_likelihood(data, mu, cov, pi)\n",
     "d_rep = util_gmm.compute_log_likelihood(data_rep, mu, cov, pi)\n",
-    "ppc = np.sqrt((d_obs - d_rep)**2)\n",
-    "print('Discrepancy of observed data: {}'.format(d_obs))\n",
-    "print('Discrepancy of replicated data: {}'.format(d_rep))\n",
-    "print('Posterior Predictive Check: {}'.format(ppc))"
+    "ppc = np.sqrt((d_obs - d_rep)**2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Population Predictive Checks"
+    "### POP-PC"
    ]
   },
   {
@@ -892,17 +848,7 @@
    "source": [
     "d_new = util_gmm.compute_log_likelihood(data_new, mu, cov, pi)\n",
     "d_rep = util_gmm.compute_log_likelihood(data_rep, mu, cov, pi)\n",
-    "pop_pc = np.sqrt((d_new - d_rep)**2)\n",
-    "print('Discrepancy of new data: {}'.format(d_new))\n",
-    "print('Discrepancy of replicated data: {}'.format(d_rep))\n",
-    "print('Population Predictive Check: {}'.format(pop_pc))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Comparing replicated, observed and new data"
+    "pop_pc = np.sqrt((d_new - d_rep)**2)"
    ]
   },
   {
@@ -918,14 +864,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choosing number of clusters K based on PPC and POP-PC \n",
+    "### Choosing  K using PPC and POP-PC \n",
     "\n",
-    "Data below is collected from repeating experiments above and changing K to observe how PPCs/POP-PCs respond.\n",
+    "Data is collected from repeating experiments above and changing K to observe how PPCs/POP-PCs respond.\n",
     "\n",
     "__Findings:__ \n",
-    "* POP-PCs are higher than PPCs which is expected\n",
-    "* As $K$ increases from 10 onwards, the discrepancy of POP-PCs increases while PPCs do not increase as much; PPC/POP-PC scores are optimal between 6 to 10. \n",
-    "* *Zig-Zag* pattern such that *even* numbers of clusters tend to have lower scores; and *odd* clusters tend to have higher scores, suggesting that optimal number of clusters is either 6, 8 or 10."
+    "* POP-PCs are higher than PPCs which is expected.\n",
+    "* As $K$ increases from 10 onwards, discrepancy of POP-PCs increases while PPCs do not increase as much; PPC/POP-PC scores are optimal between 6-10. \n",
+    "* *Zig-Zag* pattern s.t. *even* clusters tend to have lower scores; *odd* clusters have higher scores, suggesting that optimal number of clusters is 6, 8, or 10."
    ]
   },
   {
@@ -935,19 +881,6 @@
    "outputs": [],
    "source": [
     "util_gmm.plot_ppc_vs_poppc()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conclusions\n",
-    "* PPC overestimates fit of model for MFs.\n",
-    "* PoiMF had lowest mean discrepancy for k=10.\n",
-    "* Calculation of PPC and POP-PC is difficult for Bayesian models that take time.\n",
-    "* Non-identifiability of clusters is challenge for clustering movies.\n",
-    "* LKJCorr prior captures full probabilistic covariance.\n",
-    "* Combining POP-PCs and PPCs to choose number of clusters."
    ]
   }
  ],
